--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.6.0",
-    "@tinykite/core": "workspace:*",
-    "@tinykite/templates-base": "workspace:*",
-    "@tinykite/ui-schema": "workspace:*",
+    "@tinykite/core": "0.1.0",
+    "@tinykite/templates-base": "0.1.0",
+    "@tinykite/ui-schema": "0.1.0",
     "astro": "^5.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
