--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@tinykite/*": ["../../packages/*/src"]
-    }
-  }
+  "extends": "astro/tsconfigs/strict"
 }
