--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "tinykite-tools",
   "private": true,
+  "type": "module",
   "packageManager": "pnpm@9.15.2",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "scripts": {
+    "generate": "node scripts/generate-tools-registry.mjs && node scripts/generate-flows-registry.mjs && node scripts/generate-templates-registry.mjs && node scripts/generate-sitemap.mjs",
     "lint": "eslint .",
     "typecheck": "pnpm -r --filter ./packages/** run typecheck && pnpm --filter web run typecheck",
     "test": "pnpm -r --filter ./packages/** run test",
     "test:e2e": "pnpm --filter web run test:e2e",
-    "build": "pnpm --filter web run build",
+    "build": "pnpm run generate && pnpm --filter web run build",
     "dev": "pnpm --filter web run dev"
   },
   "devDependencies": {
