--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@tinykite/ui-schema": "workspace:*"
+    "@tinykite/ui-schema": "0.1.0"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
